fixed some font spacing

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -266,7 +266,7 @@
     }
 
     .case {
-      display: in-line;
+      display: inline;
       animation: 0.6s ease-in-out 0s 1 slideInFromBottom;
       font-size: 1.1em;
       font-family: 'Open Sans', sans-serif;
