--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@
       text-align: left;
       padding-top: 2.5em;
       padding-bottom: 0.5em;
-      display: in-line;
+      /* display: inline; */
       margin: 15px 0;
     }
   
@@ -251,7 +251,7 @@
     }
 
     .case {
-      display: in-line;
+      /* display: inline; */
       animation: 0.6s ease-in-out 0s 1 slideInFromBottom;
       font-size: 1.1em;
       font-family: 'Open Sans', sans-serif;
